[package]
name = "lower"
version = "0.2.0"
authors = ["bend-n <bend.n@outlook.com>"]
description = "desugar math where the compiler wont"
edition = "2021"
repository = "https://github.com/bend-n/lower-plus.git"
license = "MIT"
keywrords = ["fast", "math", "float"]
categories = ["hardware-support", "mathematics"]

[dependencies]
lower-macros = "0.2"
